# protoHack

./: .cirrus.yml  .gitignore  CMakeLists.txt  README-ARCHIVE.md  README-STATIC.md  README.md
.github/workflows/: linux-ci.yml  macos-ci.yml
dev/: package-tarballs.sh  prepare-release.sh  sanitize-build.sh  static-build.sh  ubsan-build.sh  valgrind-build.sh
docs/: CHANGELOG.md  CODING_STANDARDS.md  EXP1_CONVERSION_PLAN.md  RELEASE_CONVERSION_PLAN.md
docs/research/: COMPARISON.md  TIMELINE.md
original/: .cshrc  .exrc  .login
src/: compat.h
src/exp1/: hack.c  hack.cmdsub.c  hack.fight.c  hack.h  hack.mon.c  hack.screen.c  hack.vars
src/root/: hack.c  hack.do.c  hack.do1.c  hack.h  hack.lev.c  hack.lock.c  hack.main.c  hack.mon.c  hack.pri.c  hack.save.c  hack.vars  hackfoo.h  mklev.c  rnd.c
